# LANIOPembedded

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
apps/chat_cli/: CMakeLists.txt  cli_support.cpp  cli_support.hpp  main.cpp
apps/chat_gui/: CMakeLists.txt  audio_call_session.cpp  audio_call_session.hpp  gui_client.cpp  gui_client.hpp  main.cpp
apps/chat_server/: CMakeLists.txt  main.cpp
config/defaults/: client.json  server.json
config/profiles/: client.lan.json  server.test.json
cpp/include/lan_chat/: client.hpp  result.hpp  server.hpp
cpp/src/: client.cpp  server.cpp
db/mysql/: README.md  schema.sql
docs/architecture/: LAN_CHAT_APP_E2E.md  LAN_CHAT_ARCHITECTURE.md  LAN_CHAT_AUDIO_GUI_CALL.md  LAN_CHAT_DEVELOPMENT_RULES.md  LAN_CHAT_PHASE6_TEXT_GROUP_FILE.md  LAN_CHAT_PROTOCOL.md  LAN_CHAT_SERVER_STATE_MACHINE.md  LAN_CHAT_STORAGE.md  LAN_CHAT_TESTING.md  LAN_CHAT_TRANSPORT_WIN32.md
include/lan_chat/core/: endian.h  framer.h  protocol.h  ring_buffer.h  status.h  tlv.h  types.h
include/lan_chat/platform/win32/: platform_win32.h
include/lan_chat/server/: server.h
include/lan_chat/storage/: memory_storage.h  mysql_storage.h  storage.h
include/lan_chat/transport/: transport.h
src/core/: endian.c  framer.c  protocol.c  ring_buffer.c  status.c  tlv.c
src/platform/win32/: platform_win32.c
src/server/: server.c
src/storage/: storage.c
src/storage/memory/: storage_memory.c
src/storage/mysql/: storage_mysql.c
src/transport/: transport.c
tests/: app_e2e.ps1  app_mysql_e2e.ps1
tests/unit/: CMakeLists.txt  gui_client_tests.cpp  mysql_storage_tests.cpp  skeleton_tests.cpp
